--- a/usuarios/static/css/login.css
+++ b/usuarios/static/css/login.css
@@ -1,3 +1,5 @@
+
+
 * {
     padding: 0;
     margin: 0;
@@ -10,7 +12,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image: url(lago-montaa-naturaleza-wallpaper-preview.jpg);
+    background-image: url('imagenes/lago-montaa-naturaleza-wallpaper-preview.jpg');
     background-size: cover;
 }
 
