--- a/usuarios/templates/perfil.html
+++ b/usuarios/templates/perfil.html
@@ -1,3 +1,4 @@
+{% load crispy_forms_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
@@ -23,12 +24,13 @@
             <div class="CuadroDatos">
                 <!--Aquí arriba también pueden ir tus códigos pero el <hr> de entre medio crea una linea de separación-->
                 <h1>Mi perfil</h1>
+                <hr>
+            
                 <form action="" method="post">
                     {% csrf_token %}
-                    {{ form.as_p }}
+                    {{ form|crispy }}
                     <button type="submit" enctype="multipart/form-data">Guardar cambios</button>
                 </form>
-                <hr>
                 <!--Aquí poner tus códigos-->
             </div>
         </section>
