--- a/usuarios/templates/registration/home.html
+++ b/usuarios/templates/registration/home.html
@@ -1,38 +1,83 @@
-<h1>Bienvenido a tu página principal</h1>
-{% if user.is_authenticated %}
-    <p>¡Hola! Bienvenido {{ user.username }}.</p>
-{% endif %}
-
-<h2>Registro de Agua</h2>
-<form action="{% url 'home' %}" method="post">
-    {% csrf_token %}
-    {{ agua_form.as_table }}
-    <button type="submit" name="agua_form">Guardar registro</button>
-
-</form>
-
-<h2>Registro de Bloqueador</h2>
-<form action="{% url 'home' %}" method="post">
-    {% csrf_token %}
-    {{ bloqueador_form.as_table }}
-    <button type="submit" name="bloqueador_form">Guardar registro</button>
-</form>
-
-<h2>Registro de Ropa</h2>
-<form action="{% url 'home' %}" method="post">
-    {% csrf_token %}
-    {{ ropa_form.as_table }}
-    <button type="submit" name="ropa_form">Guardar registro</button>
-</form>
-
-{% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en" dir="ltr">  
+    <head>
+        <meta charset="UTF-8">
+        <title>Perfil</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="{% static 'css/home.css' %}">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    </head>
+<body>
+    <div class="container-form">
+        <div class="Profile">
+                <h1>Bienvenido a tu página principal</h1>
+                {% if user.is_authenticated %}
+                <p>¡Hola! Bienvenido {{ user.username }}.</p>
+                {% endif %}
+        </div>
+        <div class="formulario">
+            <div class="formulario1">
+                <h2>Registro de Agua</h2>
+                <form action="{% url 'home' %}" method="post">
+                {% csrf_token %}
+                {{ agua_form.as_table }}
+                <button type="submit" name="agua_form">Guardar registro</button>
+                </form>
+                <div class="iconos">
+                    <div class="border-icon">
+                        <i class='bx bx-water'></i>
+                    </div>
+                </div> 
+            </div>
+            <div class="formulario2">
+                <h2>Registro de Bloqueador</h2>
+                <form action="{% url 'home' %}" method="post">
+                {% csrf_token %}
+                {{ bloqueador_form.as_table }}
+                <button type="submit" name="bloqueador_form">Guardar registro</button>
+                </form>
+                <div class="iconos2">
+                    <div class="border-icon2">
+                        <i class='bx bx-sun'></i>
+                    </div>
+                </div>    
+            </div>  
+            <div class="formulario3">
+               <h2>Registro de Ropa</h2>
+               <form action="{% url 'home' %}" method="post">
+               {% csrf_token %}
+               {{ ropa_form.as_table }}
+               <button type="submit" name="ropa_form">Guardar registro</button>
+               </form>
+               <div class="iconos3">
+                  <div class="border-icon3">
+                    <i class='bx bxs-t-shirt' ></i>
+                  </div>
+               </div>
+            </div>       
+        </div>
+        <div class="mensaje">
+            {% if messages %}
+            <ul class="messages">
+            {% for message in messages %}
             <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
+            {% endfor %}
+            </ul>
+            {% endif %}
+        </div>
+        <div class="imagen"></div>
+<div class="reportes">
+    <a href="{% url 'perfil' %}">Mi perfil</a>
+    <a href="{% url 'reporte' %}">Mis reportes</a>
+</div>
+<div class="margen"></div>
 
-<a href="{% url 'logout' %}">Cerrar sesión</a>
-<a href="{% url 'perfil' %}">Mi perfil</a>
-<a href="{% url 'reporte' %}">Mis reportes</a>
+
+
+    <a href="{% url 'logout' %}">Cerrar sesión</a>
+</div>     
+</body>
