Adición de últimos detalles para presentación.

--- a/usuarios/templates/perfil.html
+++ b/usuarios/templates/perfil.html
@@ -15,8 +15,8 @@
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars"></i>
             </label>
-            <a href="{% url 'home' %}">
-                <img class="house" alt="" src="https://static.vecteezy.com/system/resources/previews/010/159/780/non_2x/house-symbol-and-home-icon-sign-design-free-png.png">
+            <a href="{% url 'principal' %}">
+                <img class="house" alt="" src="https://static.vecteezy.com/system/resources/previews/010/159/780/non_2x/house-symbol-and-principal-icon-sign-design-free-png.png">
             </a>
             <label class="logo">Datos de Perfil</label>
         </nav>
