--- a/usuarios/static/css/registro.css
+++ b/usuarios/static/css/registro.css
@@ -1,24 +1,31 @@
-*{
+* {
     padding: 0;
     margin: 0;
-    text-decoration: none;
-    list-style: none;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
 body{
-    font-family: montserrat;
-    background-color: rgba(255, 255, 255, 0.788);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-position: absolute;
-    background-size: cover;
-    color: #1b1919;
+    background-image: url('https://img.freepik.com/foto-gratis/fondo-o-textura-grunge-fondo-pared-verde-oscuro_1258-108737.jpg');
+}
+.cuadroregister{
+    border-width: 10px;
+    border-style: solid;
+    border-color: black;
+    border-top-color: #caca97;
+    width: 1000px;
+    height: 450px;
+    position: fixed;
+    right: 150px;
+    bottom: 50px;
+    padding: 15px;
+    text-align: left;
+    color: black;
+    border-radius: 15px;
+    background-color: #caca97;
 }
 nav{
-    background-image: url(lago-montaa-naturaleza-wallpaper-preview.jpg);
-    background: rgba(41, 148, 31, 0.741);
-    height: 60px;
+    background: #caca97;
+    height: 80px;
     width: 100%;
 }
 .checkbtn{
@@ -33,77 +40,6 @@ nav{
 #check{
     display: none;
 }
-.house{
-    width: 30px;
-    height: 30px;
-    margin-top: 20px;
+.tamañotexto{
     margin-left: 20px;
-}
-
-.container-form {
-    width: 100%;
-    height: 90vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    transition: all .5s ease-out;
-    align-items: center;
-}
-
-.Profile {
-    display: block;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-}
-
-.message {
-    padding: .7rem;
-}
-
-.message h2 {
-    font-size: 1.2rem;
-    padding: 1rem 0;
-}
-
-
-.formulario {
-    width: 1500px;
-    height: 400px;
-    padding: 1rem;
-    margin: 2rem;
-    background-color: rgba(74, 134, 31, 0.63);
-    text-align: center;
-    align-items: center;
-}
-
-.iconos {
-    width: 200px;
-    display: flex;
-    justify-content: space-around;
-    margin: auto;
-}
-
-.border.icon {
-    height: 1px;
-    width: 1px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1.5rem;
-    border: solid thin white;
-    border-radius: 50%;
-    font-size: 1rem;
-    transition: all in .3s ease-in;
-}
-
-.border-icon:hover {
-    background-color: #fff;
-    cursor: pointer;
-}
-.information {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 250px;
 }
