--- a/usuarios/static/css/reporte.css
+++ b/usuarios/static/css/reporte.css
@@ -4,23 +4,14 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
 }
 body{
     font-family: montserrat;
-    background-color: rgba(255, 255, 255, 0.788);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-position: absolute;
-    background-size: cover;
-    color: #1b1919;
-    height: 800px;
+    background-color: #F5F5DC;
 }
-
 nav{
-    background-image: url(lago-montaa-naturaleza-wallpaper-preview.jpg);
-    background: rgba(41, 148, 31, 0.741);
-    height: 60px;
+    background-image: url('https://img.freepik.com/foto-gratis/fondo-o-textura-grunge-fondo-pared-verde-oscuro_1258-108737.jpg');
+    height: 80px;
     width: 100%;
 }
 .checkbtn{
@@ -41,48 +32,26 @@ nav{
     margin-top: 20px;
     margin-left: 20px;
 }
-.container-form {
-    width: 100%;
-    height: 90vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    transition: all .5s ease-out;
-    align-items: center;
+label.logo{
+    color: #caca97;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
 }
-
-.Profile {
-    display: block;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-}
-
-.message {
-    padding: .7rem;
-}
-
-.message h2 {
-    font-size: 1.2rem;
-    padding: 1rem 0;
-}
-
-
-.formulario {
-    width: 1350px;
-    height: 350px;
-    padding: 1rem;
-    margin: 2rem;
-    background-color: rgba(74, 134, 31, 0.63);
-}
- .formulario1 {
-    margin: 5px;
-}
-
-.formulario2 {
-   margin: 5px;
-}
-
-.formulario3 {
-    margin: 5px;
+.cuadrocondatos{
+    border-width: 10px;
+    border-style: solid;
+    border-color: black;
+    border-top-color: #caca97;
+    border-bottom-color: #caca97;
+    width: 1220px;
+    height: 540px;
+    position: fixed;
+    left: 50px;
+    bottom: 0px;
+    padding: 15px;
+    text-align: left;
+    color: black;
+    background-color: #caca97;
 }
