--- a/usuarios/templates/registro.html
+++ b/usuarios/templates/registro.html
@@ -5,7 +5,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/registro.css'%}">
+    <link rel="stylesheet" href="{% static 'css/registro.css' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-TBDT2nREmwj2/2BLWBzFYEAgpLzDAIBb6itvz0sY6zfuCt8aWYWSgFbR8eOAsYj" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/crispy-bootstrap4@1.0.0-alpha1/dist/crispy-bootstrap4.css" integrity="sha384-TBDT2nREmwj2/2BLWBzFYEAgpLzDAIBb6itvz0sY6zfuCt8aWYWSgFbR8eOAsYj" crossorigin="anonymous">
     <title>Registro</title>
 </head>
     <body>
@@ -15,7 +18,6 @@
                 <i class="fas fa-bars"></i>
             </label>
             <a href="{% url 'login' %}" id="rettolog">
-                <img class="returntologin" alt="" src="https://i.pinimg.com/originals/35/b3/c1/35b3c1ecf233d242dc8d504203eebeec.png">
             </a>
             <h6 class="tamañotexto">Login</h6>
         </nav>
@@ -27,15 +29,3 @@
         
     </body>
 </html>
-
-
-
-
-
-<h1>Registro</h1>
-<h2>Registro de Agua</h2>
-<form action="{% url 'registro' %}" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Registrarse</button>
-</form>
